--- a/docker/Dockerfile.gpu
+++ b/docker/Dockerfile.gpu
@@ -6,7 +6,10 @@ ENV DEBIAN_FRONTEND=noninteractive \
     PYTHONPATH=/app/src \
     PORT=8000 \
     FAISS_ENABLE_GPU=ON \
-    PIP_DISABLE_PIP_VERSION_CHECK=1
+    PIP_DISABLE_PIP_VERSION_CHECK=1 \
+    API_AUTH_TOKEN=${API_AUTH_TOKEN} \
+    FAISS_INDEX_PATH=/data/vector.index \
+    IMAGE_STORAGE_PATH=/data/images
 
 WORKDIR /app
 
@@ -19,7 +22,8 @@ RUN apt-get update && \
       curl \
       jq \
       libsm6 \
-      libxext6 && \
+      libxext6 \
+      nginx && \
     apt-get clean && \
     rm -rf /var/lib/apt/lists/*
 
@@ -27,6 +31,11 @@ RUN apt-get update && \
 COPY docker/requirements.gpu.txt .
 RUN pip install --no-cache-dir --upgrade pip wheel setuptools "numpy<2" && \
     pip install --no-cache-dir -r requirements.gpu.txt
+
+# Configure nginx
+COPY docker/nginx-gpu.conf /etc/nginx/sites-available/default
+RUN ln -sf /dev/stdout /var/log/nginx/access.log && \
+    ln -sf /dev/stderr /var/log/nginx/error.log
 
 # Copy application
 COPY src/ /app/src
@@ -41,5 +50,6 @@ RUN mkdir -p /data/images /tmp && \
 HEALTHCHECK --interval=30s --timeout=3s \
   CMD curl -f http://localhost:$PORT/health || exit 1
 
-EXPOSE $PORT
-CMD ["/bin/bash", "-c", "/app/auto_terminate.sh & exec uvicorn api.gpu_server:app --host 0.0.0.0 --port $PORT"]
+EXPOSE $PORT 80
+
+CMD ["/bin/bash", "-c", "/app/auto_terminate.sh & service nginx start && exec uvicorn api.gpu_server:app --host 0.0.0.0 --port $PORT"]
