--- a/docker/requirements.txt
+++ b/docker/requirements.txt
@@ -1,59 +1,39 @@
-# --- Core App ---
-streamlit>=1.32.0
-python-dotenv
-aiohttp
-tiktoken
+# ===== Core Dependencies =====
+python-dotenv>=1.0.0
+aiohttp>=3.9.3
+tiktoken>=0.6.0
 pydantic>=2.6.4
 
-# --- LangChain & Ecosystem ---
-langchain>=0.1.16
-langchain-core>=0.1.40
-langchain-community>=0.0.33
-langchain-pinecone>=0.0.6
-langchain-openai>=0.1.6
+# ===== LangChain Ecosystem =====
+langchain-core>=0.1.47  # Core abstractions
+langchain-community>=0.2.0  # Replaces most langchain.* imports
+langchain-text-splitters>=0.0.1  # For RecursiveCharacterTextSplitter
+langchain-openai>=0.1.6  # OpenAI integrations
 
-# --- LangGraph Orchestration ---
-langgraph>=0.0.40
+# ===== Vector DB & Embeddings =====
+pinecone-client>=3.1.0  # Critical: Must be v3+ for new Pinecone() syntax
+sentence-transformers>=2.7.0  # For HuggingFace embeddings
+openai>=1.13.3  # For OpenAI embeddings fallback
 
-# --- Embeddings & Vector DB ---
-pinecone-client>=3.0.0
-openai>=1.14.3
-google-generativeai>=0.4.1
-pgvector
-sqlalchemy
+# ===== PDF Processing =====
+PyMuPDF>=1.23.22  # Fast PDF text extraction
+pypdf>=3.17.0  # Additional PDF support
+unstructured>=0.12.5  # Advanced document parsing
 
-# --- Optional Transformers (fallback embedding & tools) ---
-sentence-transformers>=2.7.0  # UPDATED: Ensure CLIP support
-transformers>=4.41.0
-torch>=2.2.2
-faiss-cpu>=1.7.4 
-accelerate
-einops>=0.7.0
+# ===== LangGraph Orchestration =====
+langgraph>=0.0.40  # Your workflow engine
 
-# --- File Parsing & Tools ---
-PyMuPDF
-arxiv
-pypdf
-duckduckgo-search
-yfinance
+# ===== API Server =====
+fastapi>=0.109.0
+uvicorn>=0.27.0
+httpx>=0.26.0  # Async HTTP client
 
-# --- Image Processing ---  # NEW SECTION
-pillow>=10.0.0  # Required for image operations
-opencv-python-headless>=4.8.0  # NEW: Helpful for advanced image processing
-imageio>=2.31.1  # NEW: Additional image support
+# ===== Optional Utilities =====
+numpy>=1.26.0  # Required by many ML libs
+pandas>=2.1.0  # For data handling
+tqdm>=4.66.0  # Progress bars
 
-# --- Agent Frameworks ---
-phidata
-groq
-agno
-phi
-tantivy>=0.21.0
-lancedb>=0.4.5
-
-# --- Server / API ---
-fastapi
-uvicorn
-
-# --- Dev, Test, Lint ---
-pytest
-flake8
+# ===== Development =====
+pytest>=8.0.0
+flake8>=7.0.0
+black>=24.0.0  # Auto-formatting
