--- a/docker/requirements.txt
+++ b/docker/requirements.txt
@@ -1,36 +1,35 @@
-# ===== Core Dependencies =====
+# ===== CORE DEPENDENCIES =====
 python-dotenv>=1.0.0
-aiohttp>=3.9.3
+aiohttp>=3.9.0
 tiktoken>=0.6.0
-pydantic>=2.6.4
+pydantic>=2.6.0
 
-# ===== Pinecone (Critical Fix) =====
-pinecone>=3.1.0  # MUST replace pinecone-client
-langchain-pinecone==0.0.6  # Keep if needed for legacy code
+# ===== PINECONE (CRITICAL) =====
+pinecone>=3.1.0  # Must use this instead of pinecone-client
 
-# ===== LangChain Ecosystem =====
-langchain-core>=0.1.47
-langchain-community>=0.2.0  # Replaces most deprecated imports
+# ===== LANGCHAIN ECOSYSTEM =====
+langchain-core>=0.1.0
+langchain-community>=0.2.0  # Replaces deprecated imports
 langchain-text-splitters>=0.0.1
-langchain-openai>=0.1.6
+langchain-openai>=0.1.0
 
-# ===== Embeddings =====
+# ===== EMBEDDINGS =====
 sentence-transformers>=2.7.0
-openai>=1.13.3
+openai>=1.0.0
 
-# ===== PDF Processing =====
-PyMuPDF>=1.23.22
-pypdf>=3.17.0
-unstructured>=0.12.5
+# ===== PDF PROCESSING =====
+PyMuPDF>=1.23.0
+pypdf>=3.0.0
+unstructured>=0.12.0
 
-# ===== LangGraph =====
+# ===== LANGGRAPH =====
 langgraph>=0.0.40
 
-# ===== API Server =====
-fastapi>=0.109.0
-uvicorn>=0.27.0
-httpx>=0.26.0
+# ===== API SERVER =====
+fastapi>=0.95.0
+uvicorn>=0.22.0
+httpx>=0.24.0
 
-# ===== Development =====
-pytest>=8.0.0
-flake8>=7.0.0
+# ===== DEVELOPMENT =====
+pytest>=7.0.0
+flake8>=6.0.0
