--- a/docker/Dockerfile.cpu
+++ b/docker/Dockerfile.cpu
@@ -17,8 +17,6 @@ RUN apt-get update && \
     apt-get install -y --no-install-recommends \
       build-essential \
       gcc \
-      git \
-      curl \
       libjpeg-dev \
       zlib1g-dev \
       poppler-utils \
@@ -28,7 +26,7 @@ RUN apt-get update && \
     apt-get clean && \
     rm -rf /var/lib/apt/lists/*
 
-# Configure nginx
+# Configure nginx (updated proxy_pass to use container networking)
 COPY docker/nginx-cpu.conf /etc/nginx/sites-available/default
 RUN ln -sf /dev/stdout /var/log/nginx/access.log && \
     ln -sf /dev/stderr /var/log/nginx/error.log
@@ -44,9 +42,11 @@ COPY src/ /app/src
 # Setup permissions
 RUN mkdir -p /tmp && chmod 777 /tmp
 
-# Health check endpoint
+# Health check (now checks through nginx)
 HEALTHCHECK --interval=30s --timeout=3s \
-  CMD curl -f http://localhost:$PORT/health || exit 1
+  CMD curl -f http://localhost/health || exit 1
 
-EXPOSE $PORT 80
-CMD ["sh", "-c", "service nginx start && exec uvicorn api.main_pdf:app --host 0.0.0.0 --port $PORT --workers 2"]
+EXPOSE 80 8001
+
+# Start command with proper service ordering
+CMD ["sh", "-c", "uvicorn api.main_pdf:app --host 0.0.0.0 --port $PORT --workers 2 & service nginx start && wait"]
