--- a/docker/requirements.txt
+++ b/docker/requirements.txt
@@ -5,20 +5,23 @@ tiktoken>=0.6.0
 pydantic>=2.6.0
 
 # ===== PINECONE (CRITICAL) =====
-pinecone>=3.1.0  # Must use this instead of pinecone-client
+pinecone>=3.0.0  # Must use this instead of pinecone-client
 
 # ===== LANGCHAIN ECOSYSTEM =====
-langchain-core>=0.1.0
-langchain-community>=0.2.0  # Replaces deprecated imports
-langchain-text-splitters>=0.0.1
+langchain>=0.1.14
+langchain-core>=0.1.47
+langchain-community>=0.0.21  # Replaces deprecated imports
+langchain-text-splitters
 langchain-openai>=0.1.0
+google-generativeai>=0.3.2
+google
 
 # ===== EMBEDDINGS =====
 sentence-transformers>=2.7.0
-openai>=1.0.0
+openai>=1.13.3
 
 # ===== PDF PROCESSING =====
-PyMuPDF>=1.23.0
+PyMuPDF>=1.23.22
 pypdf>=3.0.0
 unstructured>=0.12.0
 
