CI/CD for PDF & GPU image‐search services

--- a/.github/workflows/deploy_cpu.yml
+++ b/.github/workflows/deploy_cpu.yml
@@ -2,65 +2,56 @@ name: 🚀 CI/CD – PDF Service (CPU)
 
 on:
   push:
-    branches: [ main ]
+    branches: [main]
   workflow_dispatch:
 
-# top-level env: literals + secrets (no interpolation of env.* here)
 env:
   PORT: 8001
   FLY_APP: multi-ai-chatbot
-  FLY_API_TOKEN: ${{ secrets.FLY_API_TOKEN }}
-  PINECONE_API_KEY: ${{ secrets.PINECONE_API_KEY }}
-  PINECONE_INDEX_NAME: ${{ secrets.PINECONE_INDEX_NAME }}
-  OPENAI_API_KEY: ${{ secrets.OPENAI_API_KEY }}
-  API_AUTH_TOKEN: ${{ secrets.API_AUTH_TOKEN }}
 
 jobs:
   build-and-deploy:
     runs-on: ubuntu-latest
 
     steps:
-      - name: 📥 Checkout code
-        uses: actions/checkout@v3
+    - uses: actions/checkout@v3
 
-      - name: 🐍 Set up Python 3.10
-        uses: actions/setup-python@v4
-        with:
-          python-version: '3.10'
+    - name: Set up Python
+      uses: actions/setup-python@v4
+      with:
+        python-version: "3.10"
 
-      - name: 📦 Install dependencies
-        run: |
-          pip install --upgrade pip
-          pip install flake8 pytest
-          pip install -r docker/requirements.txt
+    - name: Lint & Test
+      run: |
+        pip install flake8 pytest
+        pip install -r docker/requirements.txt
+        flake8 src/ --count --select=E9,F63,F7,F82 --show-source --statistics
+        PYTHONPATH=src pytest src/langgraphagenticai/tests
 
-      - name: ✅ Lint
-        run: flake8 src/ --count --select=E9,F63,F7,F82 --show-source --statistics
+    - name: Install Flyctl
+      run: |
+        curl -L https://fly.io/install.sh | sh
+        echo "$HOME/.fly/bin" >> $GITHUB_PATH
 
-      - name: 🧪 Test
-        run: PYTHONPATH=src pytest src/langgraphagenticai/tests
+    - name: Fly Login
+      env:
+        FLY_API_TOKEN: ${{ secrets.FLY_API_TOKEN }}
+      run: flyctl auth login --access-token "$FLY_API_TOKEN"
 
-      - name: ⚙️ Install flyctl
-        run: |
-          curl -L https://fly.io/install.sh | sh
-          echo "$HOME/.fly/bin" >> $GITHUB_PATH
+    - name: Deploy to Fly
+      run: |
+        flyctl deploy --remote-only \
+          --app $FLY_APP \
+          --dockerfile docker/Dockerfile.cpu \
+          --strategy immediate \
+          --env PORT=$PORT
+      env:
+        PINECONE_API_KEY:   ${{ secrets.PINECONE_API_KEY }}
+        PINECONE_INDEX_NAME: ${{ secrets.PINECONE_INDEX_NAME }}
+        OPENAI_API_KEY:     ${{ secrets.OPENAI_API_KEY }}
+        API_AUTH_TOKEN:     ${{ secrets.API_AUTH_TOKEN }}
 
-      - name: 🔐 Fly login
-        run: flyctl auth login --access-token "$FLY_API_TOKEN"
-
-      - name: 🚀 Deploy PDF service
-        run: |
-          flyctl deploy --remote-only \
-            --app "$FLY_APP" \
-            --dockerfile docker/Dockerfile.cpu \
-            --strategy immediate \
-            --env PORT="$PORT" \
-            --env PINECONE_API_KEY="$PINECONE_API_KEY" \
-            --env PINECONE_INDEX_NAME="$PINECONE_INDEX_NAME" \
-            --env OPENAI_API_KEY="$OPENAI_API_KEY" \
-            --env API_AUTH_TOKEN="$API_AUTH_TOKEN"
-
-      - name: 🎯 Output service URL
-        run: |
-          HOSTNAME=$(flyctl status --app "$FLY_APP" --json | jq -r .Hostname)
-          echo "✅ PDF service live at https://$HOSTNAME"
+    - name: Show URL
+      run: |
+        host=$(flyctl status --app $FLY_APP --json | jq -r .Hostname)
+        echo "✅ PDF service live at https://$host"
