--- a/docker/Dockerfile.cpu
+++ b/docker/Dockerfile.cpu
@@ -1,52 +1,28 @@
+# docker/Dockerfile.cpu
 FROM python:3.10-slim
-
-# System configuration
-ENV DEBIAN_FRONTEND=noninteractive \
-    PYTHONUNBUFFERED=1 \
-    PYTHONPATH=/app/src \
-    PORT=8001 \
-    API_AUTH_TOKEN=${API_AUTH_TOKEN} \
-    PINECONE_API_KEY=${PINECONE_API_KEY} \
-    PINECONE_INDEX_NAME=${PINECONE_INDEX_NAME} \
-    OPENAI_API_KEY=${OPENAI_API_KEY}
 
 WORKDIR /app
 
-# Install system dependencies
-RUN apt-get update && \
-    apt-get install -y --no-install-recommends \
-      build-essential \
-      gcc \
-      libjpeg-dev \
-      zlib1g-dev \
-      poppler-utils \
-      libsm6 \
-      libxext6 \
-      nginx && \
-    apt-get clean && \
-    rm -rf /var/lib/apt/lists/*
+# system deps for PDF & images
+RUN apt-get update \
+ && apt-get install -y --no-install-recommends \
+      build-essential gcc libjpeg-dev zlib1g-dev poppler-utils \
+ && rm -rf /var/lib/apt/lists/*
 
-# Configure nginx (updated proxy_pass to use container networking)
-COPY docker/nginx-cpu.conf /etc/nginx/sites-available/default
-RUN ln -sf /dev/stdout /var/log/nginx/access.log && \
-    ln -sf /dev/stderr /var/log/nginx/error.log
+# install Python packages
+COPY docker/requirements.txt /app/requirements.txt
+RUN pip install --no-cache-dir --upgrade pip setuptools wheel \
+ && pip install --no-cache-dir -r /app/requirements.txt
 
-# Install Python dependencies
-COPY docker/requirements.txt .
-RUN pip install --no-cache-dir --upgrade pip setuptools wheel && \
-    pip install --no-cache-dir -r requirements.txt
-
-# Copy application
+# copy your code
 COPY src/ /app/src
 
-# Setup permissions
-RUN mkdir -p /tmp && chmod 777 /tmp
+# set PYTHONPATH so imports "langgraphagenticai.*" work
+ENV PYTHONPATH=/app/src
 
-# Health check (now checks through nginx)
-HEALTHCHECK --interval=30s --timeout=3s \
-  CMD curl -f http://localhost/health || exit 1
+# expose the FastAPI port
+ENV PORT=8001
+EXPOSE 8001
 
-EXPOSE 80 8001
-
-# Start command with proper service ordering
-CMD ["sh", "-c", "uvicorn api.main_pdf:app --host 0.0.0.0 --port $PORT --workers 2 & service nginx start && wait"]
+# start uvicorn
+CMD ["uvicorn", "api.main_pdf:app", "--host", "0.0.0.0", "--port", "8001"]
