--- a/fly.toml
+++ b/fly.toml
@@ -15,6 +15,13 @@ primary_region = "ams"
     port = 80
     handlers = ["http"]
 
-  [[services.ports]]
-    port = 443
-    handlers = ["tls", "http"]
+  [[services.http_checks]]
+    path          = "/health"
+    interval      = "10s"
+    timeout       = "2s"
+    grace_period  = "40s"
+
+  [[services.tcp_checks]]
+  interval      = "10s"
+  timeout       = "2s"
+  grace_period  = "40s"
