--- a/docker/Dockerfile.cpu
+++ b/docker/Dockerfile.cpu
@@ -1,28 +1,32 @@
-# docker/Dockerfile.cpu
+# Use the official slim Python image
 FROM python:3.10-slim
 
+# Set working directory
 WORKDIR /app
 
-# set PYTHONPATH so imports "langgraphagenticai.*" work
+# Allow Fly (or any orchestrator) to override the port at build-time
+ARG PORT=8080
+ENV PORT=${PORT}
+
+# Make your src/ imports resolve
 ENV PYTHONPATH=/app/src
 
-# system deps for PDF & images
+# System deps for PDF + images
 RUN apt-get update \
  && apt-get install -y --no-install-recommends \
       build-essential gcc libjpeg-dev zlib1g-dev poppler-utils \
  && rm -rf /var/lib/apt/lists/*
 
-# install Python packages
+# Install Python packages
 COPY docker/requirements.txt /app/requirements.txt
 RUN pip install --no-cache-dir --upgrade pip setuptools wheel \
  && pip install --no-cache-dir -r /app/requirements.txt
 
-# copy your code
+# Copy application code
 COPY src/ /app/src
 
-# expose the FastAPI port
-ENV PORT=8001
-EXPOSE 8001
+# Expose the dynamic port
+EXPOSE ${PORT}
 
-# start uvicorn
-CMD ["uvicorn", "api.main_pdf:app", "--host", "0.0.0.0", "--port", "8001"]
+# Run Uvicorn on 0.0.0.0:$PORT
+CMD ["sh","-c","uvicorn api.main_pdf:app --host 0.0.0.0 --port $PORT"]
