--- a/fly.toml
+++ b/fly.toml
@@ -4,11 +4,9 @@ primary_region = "ams"
 [build]
   dockerfile = "docker/Dockerfile.cpu"
 
-[env]
-  PORT = "8001"
-
 [[services]]
-  internal_port = 8001
+  # This must match whatever your container is listening on ($PORT)
+  internal_port = 8080
   protocol = "tcp"
 
   [[services.ports]]
@@ -16,12 +14,12 @@ primary_region = "ams"
     handlers = ["http"]
 
   [[services.http_checks]]
-    path          = "/health"
-    interval      = "10s"
-    timeout       = "2s"
-    grace_period  = "40s"
+    path         = "/health"
+    interval     = "10s"
+    timeout      = "2s"
+    grace_period = "40s"
 
   [[services.tcp_checks]]
-  interval      = "10s"
-  timeout       = "2s"
-  grace_period  = "40s"
+    interval     = "10s"
+    timeout      = "2s"
+    grace_period = "40s"
