--- a/fly.toml
+++ b/fly.toml
@@ -4,13 +4,18 @@ primary_region = "ams"
 [build]
   dockerfile = "docker/Dockerfile.cpu"
 
+[build.args]
+  PORT = "8080"
+
+[env]
+  PORT = "8080"
+
 [[services]]
-  # This must match whatever your container is listening on ($PORT)
   internal_port = 8080
-  protocol = "tcp"
+  protocol      = "tcp"
 
   [[services.ports]]
-    port = 80
+    port     = 80
     handlers = ["http"]
 
   [[services.http_checks]]
@@ -18,6 +23,7 @@ primary_region = "ams"
     interval     = "10s"
     timeout      = "2s"
     grace_period = "40s"
+
 
   [[services.tcp_checks]]
     interval     = "10s"
