--- a/fly.toml
+++ b/fly.toml
@@ -5,6 +5,7 @@ primary_region = "ams"
   dockerfile = "docker/Dockerfile.cpu"
 
 [build.args]
+  # passed into your Dockerfile so Uvicorn will listen on 0.0.0.0:$PORT
   PORT = "8080"
 
 [env]
@@ -14,18 +15,24 @@ primary_region = "ams"
   internal_port = 8080
   protocol      = "tcp"
 
+  # HTTP on 80 (insecure)...
   [[services.ports]]
     port     = 80
     handlers = ["http"]
 
+  # …and HTTPS on 443, with TLS termination in Fly’s proxy
+  [[services.ports]]
+    port     = 443
+    handlers = ["tls", "http"]
+
+  # give the container extra time to boot & respond
   [[services.http_checks]]
     path         = "/health"
-    interval     = "10s"
-    timeout      = "2s"
-    grace_period = "40s"
-
+    interval     = "15s"   # check every 15s
+    timeout      = "5s"    # allow up to 5s for each check
+    grace_period = "3m"    # wait up to 3 minutes for a first successful check
 
   [[services.tcp_checks]]
-    interval     = "10s"
-    timeout      = "2s"
-    grace_period = "40s"
+    interval     = "15s"
+    timeout      = "5s"
+    grace_period = "3m"
