--- a/docker/requirements.txt
+++ b/docker/requirements.txt
@@ -1,16 +1,16 @@
 # ===== CORE DEPENDENCIES =====
 python-dotenv>=1.0.0
-aiohttp>=3.9.0
+aiohttp
 tiktoken>=0.6.0
-pydantic>=2.6.0,<3.0.0
+pydantic
 
 # ===== PINECONE =====
-pinecone>=2.2.1,<3.0.0
+pinecone>=3.0.0
 
 # ===== LANGCHAIN ECOSYSTEM =====
-langchain==0.1.14
-langchain-community>=0.0.30,<0.1.0
-langchain-core>=0.1.47,<0.2.0
+langchain>=0.1.14
+langchain-community>=0.0.21
+langchain-core>=0.1.47
 langchain-text-splitters>=0.0.1
 langchain-openai>=0.1.0
 
