--- a/docker/Dockerfile.cpu
+++ b/docker/Dockerfile.cpu
@@ -29,4 +29,4 @@ COPY src/ /app/src
 EXPOSE ${PORT}
 
 # Run Uvicorn on 0.0.0.0:$PORT
-CMD ["sh","-c","uvicorn api.main_pdf:app --host 0.0.0.0 --port $PORT" "--log-level" "debug"]
+CMD uvicorn api.main_pdf:app --host 0.0.0.0 --port $PORT --log-level debug
