--- a/.github/workflows/deploy_cpu.yml
+++ b/.github/workflows/deploy_cpu.yml
@@ -44,6 +44,7 @@ jobs:
           --app $FLY_APP \
           --dockerfile docker/Dockerfile.cpu \
           --strategy immediate \
+          --no-buildpacks
           --env PORT=$PORT
       env:
         FLY_API_TOKEN:     ${{ secrets.FLY_API_TOKEN }}
